exports[`test Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://estudio.io/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Estudio
</a>
`;

exports[`test Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://estudio.io/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Estudio
</a>
`;

exports[`test Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://estudio.io/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Estudio
</a>
`;
